internal/octogo/testdata/21_unary_ops.ogo
func testUnary() {
	var x int = 5
	var b bool = false

	// Valid unary operations
	var negX int = -x
	var posX int = +x
	var notB bool = !b
	var bitNotX int = ^x

	// ERROR "invalid operation|operator ! not defined for int"
	var inv1 bool = !x

	// ERROR "invalid operation|operator - not defined for bool"
	var inv2 bool = -b

	// ERROR "invalid operation|operator \^ not defined for string"
	var inv3 string = ^"test"

	_ = negX
	_ = posX
	_ = notB
	_ = bitNotX
	_ = inv1
	_ = inv2
	_ = inv3
}
